--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.2.1",
+    "dependencies": "^0.0.1",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "react": "^16.10.2",
