--- a/developer-journey-map/client/package.json
+++ b/developer-journey-map/client/package.json
@@ -11,6 +11,7 @@
     "all": "^0.0.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "html-react-parser": "^3.0.12",
+    "mongoose": "^7.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
