--- a/developer-journey-map/client/package.json
+++ b/developer-journey-map/client/package.json
@@ -11,6 +11,7 @@
     "all": "^0.0.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "html-react-parser": "^3.0.12",
+    "jspdf": "^2.5.1",
     "mongoose": "^7.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-to-print": "^2.14.12",
     "reactflow": "^11.5.6",
     "web-vitals": "^2.1.4"
   },
