--- a/developer-journey-map/client/package.json
+++ b/developer-journey-map/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-storage-complete": "^1.1.1",
     "react-to-print": "^2.14.12",
     "reactflow": "^11.5.6",
     "web-vitals": "^2.1.4"
