--- a/developer-journey-map/client/package.json
+++ b/developer-journey-map/client/package.json
@@ -11,6 +11,7 @@
     "all": "^0.0.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "html-react-parser": "^3.0.12",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "mongoose": "^7.0.1",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-storage-complete": "^1.1.1",
     "react-to-print": "^2.14.12",
     "reactflow": "^11.5.6",
+    "use-react-screenshot": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
