--- a/developer-journey-map/client/package.json
+++ b/developer-journey-map/client/package.json
@@ -6,6 +6,7 @@
     "@ckeditor/ckeditor5-react": "^5.1.0",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.15",
+    "@szhsin/react-menu": "^3.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
