--- a/developer-journey-map/client/package.json
+++ b/developer-journey-map/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "all": "^0.0.0",
     "ckeditor5-custom-build": "file:ckeditor5",
+    "dotenv": "^16.0.3",
     "html-react-parser": "^3.0.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
