--- a/developer-journey-map/client/.env
+++ b/developer-journey-map/client/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_ENDPOINT="https://developer-journey-map.onrender.com"
+REACT_APP_API_ENDPOINT=https://developer-journey-map.onrender.com
