--- a/developer-journey-map/client/package.json
+++ b/developer-journey-map/client/package.json
@@ -13,6 +13,7 @@
     "all": "^0.0.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "dotenv": "^16.0.3",
+    "firebase": "^9.20.0",
     "html-react-parser": "^3.0.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
@@ -22,6 +23,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-dialog-confirm": "^1.0.3",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-frame-component": "^5.2.6",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
