--- a/developer-journey-map/client/.env
+++ b/developer-journey-map/client/.env
@@ -1,1 +1,9 @@
-REACT_APP_API_ENDPOINT=https://developer-journey-map.onrender.com
+REACT_APP_API_ENDPOINT="https://developer-journey-map.onrender.com"
+
+REACT_APP_FIREBASE_API_KEY="AIzaSyCkYskBSadsh_fE7m3pAsoNPiG7vSG9_yg"
+REACT_APP_FIREBASE_AUTH_DOMAIN="developer-journey-map-auth.firebaseapp.com"
+REACT_APP_FIREBASE_PROJECT_ID="developer-journey-map-auth"
+REACT_APP_FIREBASE_STORAGE_BUCKET="developer-journey-map-auth.appspot.com"
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID="680932717154"
+REACT_APP_FIREBASE_APP_ID="1:680932717154:web:dae9d6e116239b580c173b"
+REACT_APP_FIREBASE_MEASUREMENT_ID="G-JD4PKVQ2RP"
