--- a/developer-journey-map/client/package.json
+++ b/developer-journey-map/client/package.json
@@ -18,6 +18,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "mongoose": "^7.0.1",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-confirm-alert": "^3.0.6",
