--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,4 @@
-REACT_APP_API_ENDPOINT="https://developer-journey-map.onrender.com"
-
+REACT_APP_API_ENDPOINT="https://developer-journey-map-server.onrender.com"
 REACT_APP_FIREBASE_API_KEY="AIzaSyCkYskBSadsh_fE7m3pAsoNPiG7vSG9_yg"
 REACT_APP_FIREBASE_AUTH_DOMAIN="developer-journey-map-auth.firebaseapp.com"
 REACT_APP_FIREBASE_PROJECT_ID="developer-journey-map-auth"
